fix the problem for the visibility of tags and categories by css

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1099,7 +1099,7 @@ Theme Grid
         align-items: center;
         font-family: "Font Awesome 5 Free";
         font-weight: 900;
-        max-width: 50%;
+        max-width: 100%;
         &:hover,
         &:active {
           ul {
@@ -1133,7 +1133,7 @@ Theme Grid
           li {
             visibility: visible;
             font-family: "Raleway", Helvetica, sans-serif;
-            font-size: 0.6em;
+            font-size: 0.8em;
             font-weight: 400;
             letter-spacing: 0.1em;
             line-height: 0;
